#162 Fixed navbar. Now, navbar on mobile is fixed on top. Only thing lelft is to add "back to top" component( or create) so user can go back to top automatically without scrolling

--- a/src/front/client/src/app/components/device-details/device-details.component.css
+++ b/src/front/client/src/app/components/device-details/device-details.component.css
@@ -15,6 +15,9 @@
   #container {
     flex-direction: row;
   }
+  #content {
+    margin-top: 88px;
+  }
   #device-details {
     display: flex;
     flex-direction: column;
